--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="//phono-demo.myshopify.com/cdn/shop/files/favicon.png?crop=center&amp;height=32&amp;v=1622269929&amp;width=32">
-    <title>Document</title>
+    <title>PHONO</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
@@ -25,7 +25,7 @@
     </div>
     <!-- Cart -->
     <div class="cart-overlay"></div>
-    <div class="cart d-flex flex-column p-2">
+    <div class="cart flex-column p-2">
       <div class="cart-header d-flex justify-content-between align-items-center border-bottom p-2">
         <h2>Your cart</h2>
         <span class="btn btn-close"></span>
