--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
           <!-- Offcanvas -->
           <div class="sidebar offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
             <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 d-xl-flex ">
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 d-xl-flex h-100">
                 <li class="nav-item p-2 mb-1 mx-2 active">
                   <a class="nav-link text-dark click0" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item p-2 mb-1 mx-2 collection-item">
                   <a class="nav-link text-dark click2 d-flex justify-content-between align-items-center" href="#our-stuff">Collection <i class="fa-solid fa-arrow-right pe-3"></i></a>
                 </li>
-                <div class="collection overflow-auto">
+                <div class="collection overflow-auto top-0">
                   <button class="btn collection-back-btn"><i class="fa-solid fa-arrow-left pe-3"></i> Collection</button>
                   <ul class="list-inline p-3">
                     <li>
@@ -234,7 +234,7 @@
                 <li class="nav-item p-2 mx-2 pages-item">
                   <a class="nav-link text-dark click5 d-flex justify-content-between align-items-center" href="#about">Pages <i class="fa-solid fa-arrow-right pe-3"></i></a>
                 </li>
-                <div class="pages">
+                <div class="pages top-0">
                   <button class="btn pages-back-btn"><i class="fa-solid fa-arrow-left pe-3"></i> Pages</button>
                   <ul class="list-inline">
                     <li class="p-3 ps-5"><a href="#" class="text-decoration-none text-dark">About Us</a></li>
