--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </head>
   <body class="overflow-x-hidden">
     <!-- Toast -->
-    <div class="toast rounded-0 show shadow-none bg-dark w-100" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast rounded-0 show shadow-none bg-dark w-100 border-dark role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-header bg-dark text-white">
-        <h4 class="mx-auto">Long Weekend Sale Up to 50% OFF Shop Now</h4>
+        <h6 class="mx-auto my-0">Long Weekend Sale Up to 50% OFF Shop Now</h6>
         <div data-bs-theme="dark">
           <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
@@ -853,8 +853,13 @@
               <div class="accordion" id="accordionExample">
                 <div class="accordion-item border-0 bg-transparent text-white">
                   <h2 class="accordion-header border-bottom">
-                    <button class="accordion-button bg-transparent shadow-none text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    <button class="accordion-button bg-transparent shadow-none text-white d-flex justify-content-between" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                       NEW GRADIENT COLOR FINISHES
+                      <div class="menu-item menu-item-0">
+                        <span class="one"></span>
+                        <span class="two"></span>
+                        <span class="three"></span>
+                      </div>
                     </button>
                   </h2>
                   <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
@@ -871,8 +876,13 @@
                 </div>
                 <div class="accordion-item border-0 bg-transparent text-white">
                   <h2 class="accordion-header border-bottom">
-                    <button class="accordion-button bg-transparent shadow-none text-white collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <button class="accordion-button bg-transparent shadow-none text-white d-flex justify-content-between collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                       FOUR-SIDED CURVED CERAMIC BODY
+                      <div class="menu-item menu-item-1">
+                        <span class="one"></span>
+                        <span class="two"></span>
+                        <span class="three"></span>
+                      </div>
                     </button>
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -889,8 +899,13 @@
                 </div>
                 <div class="accordion-item border-0 bg-transparent text-white">
                   <h2 class="accordion-header border-bottom">
-                    <button class="accordion-button bg-transparent shadow-none text-white collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <button class="accordion-button bg-transparent shadow-none text-white d-flex justify-content-between collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                       4000MAH HIGH-CAPACITY BATTERY
+                      <div class="menu-item menu-item-2">
+                        <span class="one"></span>
+                        <span class="two"></span>
+                        <span class="three"></span>
+                      </div>
                     </button>
                   </h2>
                   <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
@@ -907,8 +922,13 @@
                 </div>
                 <div class="accordion-item border-0 bg-transparent text-white">
                   <h2 class="accordion-header border-bottom">
-                    <button class="accordion-button bg-transparent shadow-none text-white collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    <button class="accordion-button bg-transparent shadow-none text-white d-flex justify-content-between collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                       FULLY HIDDEN CAMERA LENS
+                      <div class="menu-item menu-item-3">
+                        <span class="one"></span>
+                        <span class="two"></span>
+                        <span class="three"></span>
+                      </div>
                     </button>
                   </h2>
                   <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
