--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <!-- Offcanvas -->
-          <div class="sidebar offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+          <div class="sidebar offcanvas offcanvas-start justify-content-between" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
             <div class="offcanvas-body flex-grow-0">
               <ul class="navbar-nav justify-content-start flex-grow-1 pe-3 d-xl-flex h-100">
                 <li class="nav-item p-2 mb-1 mx-2 active">
