--- a/index.html
+++ b/index.html
@@ -54,16 +54,11 @@
           <!-- Logo -->
           <a class="navbar-brand fs-2 order-md-1 order-xl-0 d-none d-sm-block" href="#"><img src="./assets/imgs/logo.jpg" alt="#"></a>
           <!-- Navbar Toggler -->
-          <button
-            class="navbar-toggler shadow-none border-0 d-block d-xl-none"
-            type="button"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#offcanvasNavbar"
-            aria-controls="offcanvasNavbar"
-            aria-label="Toggle navigation"
-            >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+          <div class="nav-menu-item d-xl-none ps-3 mx-3">
+            <span class="one"></span>
+            <span class="two"></span>
+            <span class="three"></span>
+          </div>
           <!-- Offcanvas -->
           <div class="sidebar offcanvas offcanvas-start justify-content-between" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
             <div class="offcanvas-body flex-grow-0">
@@ -538,6 +533,45 @@
       </section>
     </header>
     <main>
+      <section class="extra-line border-bottom">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 col-sm-4">
+              <div class="extra-card d-flex justify-content-center align-items-center p-4">
+                <div class="extra-img pe-3">
+                  <img src="./assets/imgs/extra1.jpg" alt="">
+                </div>
+                <div class="extra-text">
+                  <h6>FREE SHIPPING</h6>
+                  <P class="text-black-50 m-0">Save Big on next product</P>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-4">
+              <div class="extra-card d-flex justify-content-center align-items-center p-4">
+                <div class="extra-img pe-3">
+                  <img src="./assets/imgs/extra2.jpg" alt="">
+                </div>
+                <div class="extra-text">
+                  <h6>24/7 Helpline</h6>
+                  <P class="text-black-50 m-0">Care till the end</P>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-4">
+              <div class="extra-card d-flex justify-content-center align-items-center p-4">
+                <div class="extra-img pe-3">
+                  <img src="./assets/imgs/extra3.jpg" alt="">
+                </div>
+                <div class="extra-text">
+                  <h6>FREE SHIPPING</h6>
+                  <P class="text-black-50 m-0">For order over$50</P>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="what-makes-different py-5">
         <div class="container">
           <div class="row text-center section-header">
