--- a/index.html
+++ b/index.html
@@ -841,11 +841,21 @@
               <div class="row">
                 <div class="col-12 col-sm-6 p-0">
                   <div class="square-img-container w-100 h-100 position-relative">
+                    <div class="square-overlay">
+                      <p>DOT NOTCH DISPLAY</p>
+                      <h3>SMOOTH CONTROL</h3>
+                      <a href="#" class="btn btn-light">View More</a>
+                    </div>
                     <img src="./assets/imgs/squares1.png" class="w-100 h-100 object-fit-cover" alt="">
                   </div>
                 </div>
                 <div class="col-12 col-sm-6 p-0">
                   <div class="square-img-container w-100 h-100 position-relative">
+                    <div class="square-overlay">
+                      <p>CRYSTAL POLYCARBONATE</p>
+                      <h3>PRECISE CUT-OUTS</h3>
+                      <a href="#" class="btn btn-light">View More</a>
+                    </div>
                     <img src="./assets/imgs/squares2.png" class="w-100 h-100 object-fit-cover" alt="">
                   </div>
                 </div>
@@ -853,11 +863,21 @@
               <div class="row">
                 <div class="col-12 col-sm-6 p-0">
                   <div class="square-img-container w-100 h-100 position-relative">
+                    <div class="square-overlay">
+                      <p>BEAUTIFUL FINISH</p>
+                      <h3>SEVEN LAYER COLOR</h3>
+                      <a href="#" class="btn btn-light">View More</a>
+                    </div>
                     <img src="./assets/imgs/squares4.png" class="w-100 h-100 object-fit-cover" alt="">
                   </div>
                 </div>
                 <div class="col-12 col-sm-6 p-0">
                   <div class="square-img-container w-100 h-100 position-relative">
+                    <div class="square-overlay">
+                      <p>HIGH SPEED</p>
+                      <h3>POWER OF ANDROID</h3>
+                      <a href="#" class="btn btn-light">View More</a>
+                    </div>
                     <img src="./assets/imgs/squares5.png" class="w-100 h-100 object-fit-cover" alt="">
                   </div>
                 </div>
@@ -865,6 +885,11 @@
             </div>
             <div class="col-12 col-md-4 p-0">
               <div class="square-img-container col-img w-100 h-100 position-relative">
+                <div class="square-overlay">
+                  <p>CURVED CERAMIC BODY</p>
+                  <h3>EXTREMELY THIN AND LIGHT</h3>
+                  <a href="#" class="btn btn-light">View More</a>
+                </div>
                 <img src="./assets/imgs/squares3.png" class="w-100 h-100 object-fit-cover" alt="">
               </div>
             </div>
