--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         <h2>Your cart</h2>
         <span class="btn btn-close"></span>
       </div>
-      <div class="cart-body flex-grow-1 overflow-auto">
+      <div class="cart-body flex-grow-1 overflow-auto d-flex justify-content-center align-items-center">
+        <div class="warning text-center">
+          <i class="fa-solid fa-screwdriver-wrench fs-1 pb-5"></i>
+          <p class="fw-bold fs-3">Sorry You Can't Buy Now <i class="fa-solid fa-face-sad-tear"></i></p>
+          <p>website is under maintenance</p>
+        </div>
       </div>
       <div class="cart-footer d-flex flex-column border-top p-2">
         <div class="totals d-flex justify-content-between">
