--- a/index.html
+++ b/index.html
@@ -1075,6 +1075,9 @@
         </div>
       </div>
     </footer>
+    <div class="scroll-top" id="btn-up">
+      <i class="fa-solid fa-chevron-up"></i>
+    </div>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="./assets/js/script.js"></script>
   </body>
